<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/man_relativelayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shop_cart"
            android:textColor="@color/main_title_color"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_shopcart_editbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/editor"
                android:textColor="@color/main_title_color"
                android:textSize="16sp"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/img_shopcart_edit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerInside"
                android:src="@drawable/selected_false"
                android:visibility="gone"/>

        </LinearLayout>
    </RelativeLayout>

    <View style="@style/liner_horizontal"/>
    <!--加载失败显示的页面-->
    <!--<include-->
    <!--android:id="@+id/layout_loadfail"-->
    <!--android:visibility="gone"/>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shop_recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="afterDescendants"
            android:fillViewport="true"/>
        <!--点击回到顶部按钮-->
        <ImageView
            android:id="@+id/img_totop_button"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/selected_false"
            android:visibility="gone"/>
    </FrameLayout>
    <!--底部title-->
    <LinearLayout
        android:id="@+id/linear_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <View style="@style/liner_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_allselect"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/selected_false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/selectedall"
                android:textColor="@color/main_title_color"
                android:textSize="12sp"/>

            <LinearLayout
                android:id="@+id/linear_bottom_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/dp_15">

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/theme_color"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_shopcart_Zprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="¥0"
                        android:textColor="@color/theme_color"
                        android:textSize="12sp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/unfreight"
                    android:textColor="@color/main_title_color"
                    android:textSize="10sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_shopcart_account"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@android:color/holo_red_dark"
                android:clickable="true"
                android:text="@string/account"
                android:textColor="@color/white"/>
        </LinearLayout>

        <View style="@style/liner_horizontal"/>
    </LinearLayout>
</LinearLayout>